<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:padding="@dimen/my_padding"
        android:text="@string/filtered_permissions_through_algorithm_head"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/filtered_permissions_through_algorithm"
        android:textColor="@color/colorBlue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/filtered_permissions_through_algorithm_red"
        android:textColor="@color/colorRed"
        android:textStyle="bold" />

</LinearLayout>